# rdp-assignment

./: .gitignore  AGENTS.md  CLAUDE.md  GRADING.md  IMPLEMENTATION_GUIDE.md  README.md  TESTING.md  WRITEUP.md  pyproject.toml  requirements.txt
docs/protocol/: fsm.md  implementation.md  wire-format.md
src/rdp/: connection.py  framing.py  timers.py
tests/: conftest.py
tests/_harness/: assertions.py  category_hints.json  host_protocol.py  plugin.py  runner.py  scenario.py  schema.py  simulator.py  test_assertions.py  test_runner.py  test_scenario_loader.py  test_simulator.py
tests/bundle1/: test_framing.py
tests/bundle2/: data_multi_segment.json  data_single_segment.json  handshake_basic.json  teardown_unilateral.json  window_full.json
tests/bundle3/ack_loss/: ack_loss_with_window.json  consecutive_ack_loss.json  single_ack_loss.json
tests/bundle3/corruption/: ack_corrupt.json  data_corrupt.json  handshake_corrupt.json
tests/bundle3/handshake_loss/: final_ack_lost.json  syn_ack_lost.json  syn_lost.json
tests/bundle3/retransmit/: double_loss.json  loss_then_burst.json  simple_data_loss.json
tests/bundle3/sack/: multiple_gaps.json  out_of_order_recovery.json  sack_incremental_fill.json
tests/bundle3/teardown_edge/: simultaneous_close.json
